--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
 
   </script>
 
-  <meta charset="utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Council Search</title>
   <base href="/">
