push new update

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   <base href="/">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://www.google-analytics.com">
+  <link rel="preconnect" href="https://sc.lfeeder.com">
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/logo/favicon-16x16.png">
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- https://medium.com/madhash/how-to-properly-add-google-analytics-tracking-to-your-angular-web-app-bc7750713c9e -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167455761-1"></script>
@@ -40,4 +43,5 @@
 <body class="black">
   <app-root></app-root>
 </body>
+<script src="https://kit.fontawesome.com/91e3a96062.js" crossorigin="anonymous"></script>
 </html>
